--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.4.2",
     "video-react": "^0.14.1",
+    "vtt.js": "^0.13.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
