--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^12.20.23",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-json-view": "^1.21.3",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
+    "ts-transformer-keys": "^0.4.3",
     "typescript": "^4.4.2",
     "video-react": "^0.14.1",
     "vtt.js": "^0.13.0",
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.172"
   }
 }
