--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src/*", "src/vtt/useCueTrigger.ts"  ]
+    "src/*", "src/lib/*", "src/demo/vtt/useCueTrigger.ts", "src/react-app-env.d.ts" ]
 }
