--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webvtt-demo",
-  "version": "0.1.0",
+  "name": "vtt.ts",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
