--- a/package.json
+++ b/package.json
@@ -2,33 +2,13 @@
   "name": "vtt.ts",
   "version": "0.2.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.23",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
-    "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-app-rewired": "^2.1.8",
-    "react-dom": "^17.0.2",
-    "react-json-view": "^1.21.3",
-    "react-player": "^2.9.0",
-    "react-scripts": "4.0.3",
-    "ts-transformer-keys": "^0.4.3",
-    "typescript": "^4.4.2",
-    "video-react": "^0.14.1",
-    "vtt.js": "^0.13.0",
-    "web-vitals": "^1.1.2"
-  },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "tsc src/lib/index.ts --outDir lib && typedoc",
+    "build:demo": "BUILD_PATH='./demo' react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "docs": "typedoc --excludePrivate"
   },
   "eslintConfig": {
     "extends": [
@@ -49,7 +29,28 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.172",
-    "react-app-rewire-alias": "^1.0.3"
+    "@types/node": "^12.20.23",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-app-rewire-alias": "^1.0.3",
+    "react-app-rewired": "^2.1.8",
+    "react-dom": "^17.0.2",
+    "react-json-view": "^1.21.3",
+    "react-player": "^2.9.0",
+    "react-scripts": "^4.0.3",
+    "ts-transformer-keys": "^0.4.3",
+    "typedoc": "^0.22.5",
+    "typescript": "^4.4.2",
+    "video-react": "^0.14.1",
+    "vtt.js": "^0.13.0",
+    "web-vitals": "^1.1.2"
   }
 }
