--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "tsc src/lib/index.ts --outDir lib && typedoc",
+    "build": "tsc src/lib/index.ts --outDir lib",
     "build:demo": "BUILD_PATH='./demo' react-app-rewired build",
+    "build:docs": "typedoc",
+    "build:all": "npm run build && npm rum build:demo && npm run build:docs",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "docs": "typedoc --excludePrivate"
