--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vtt.ts",
   "version": "0.2.0",
   "private": true,
+  "homepage": "./",
   "scripts": {
     "start": "react-app-rewired start",
     "build": "tsc src/lib/index.ts --outDir lib",
