--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "tsc src/lib/index.ts --outDir lib",
-    "build:docs": "typedoc",
+    "build:docs": "typedoc --excludePrivate",
     "build:all": "npm run build && npm run build:docs",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "docs": "typedoc --excludePrivate"
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
