--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "webvtt.ts",
+  "name": "@cbrandolino/webvtt.ts",
   "version": "0.3.0",
   "private": true,
   "scripts": {
     "start": "react-app-rewired start",
     "build": "tsc src/lib/index.ts --outDir lib",
-    "build:docs": "typedoc --excludePrivate",
+    "build:docs": "typedoc  --excludePrivate --name webvtt.ts --plugin typedoc-plugin-mdn-links",
     "build:all": "npm run build && npm run build:docs",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
@@ -48,6 +48,8 @@
     "react-scripts": "^4.0.3",
     "ts-transformer-keys": "^0.4.3",
     "typedoc": "^0.22.5",
+    "typedoc-plugin-mdn-links": "^1.0.4",
+    "typedoc-plugin-missing-exports": "^0.22.3",
     "typescript": "^4.4.2",
     "video-react": "^0.14.1",
     "vtt.js": "^0.13.0",
